--- a/style.scss
+++ b/style.scss
@@ -33,7 +33,7 @@ body {
             background-size: 100% 90%;
             background-position: top;
 
-            .first-slide {
+            .slide {
                 background-image: url(./images/image-tanya.jpg);
                 background-repeat: no-repeat;
                 background-size: cover;
@@ -59,8 +59,12 @@ body {
                     height: 10px;
                     background-image: url(./images/icon-prev.svg);
                     background-repeat: no-repeat;
-                    background-size: 100% 100%;
+                    background-size: cover;
                     background-position: center;
+
+                    &:hover {
+                        background-image: url(./images/icon-prev-hover.svg);
+                    }
                 }
 
                 .next {
@@ -69,8 +73,12 @@ body {
                     height: 10px;
                     background-image: url(./images/icon-next.svg);
                     background-repeat: no-repeat;
-                    background-size: 100% 100%;
+                    background-size: cover;
                     background-position: center;
+
+                    &:hover {
+                        background-image: url(./images/icon-next-hover.svg);
+                    }
                 }
             }
         }
@@ -91,23 +99,24 @@ body {
                 margin-left: 10%;
             }
 
-            p:first-of-type {
+            p {
                 color: $Dark-Blue;
                 font-size: 1.2rem;
                 font-weight: 300;
                 margin-top: -25px;
             }
 
-            p:last-of-type {
+            span:first-of-type {
                 color: $Dark-Blue;
                 font-size: 1rem;
                 font-weight: 700;
                 line-height: 5;
+            }
 
-                span {
-                    color: $Grayish-Blue;
-                    font-weight: 300;
-                }
+            span:last-of-type {
+                color: $Grayish-Blue;
+                font-size: 1rem;
+                font-weight: 300;
             }
         }
 
