--- a/compiled.css
+++ b/compiled.css
@@ -35,7 +35,7 @@ body main .right .slider {
   width: 75px;
   margin-top: -65px;
   margin-left: 25%;
-  box-shadow: 10px 10px 40px 0px #babacf, 2px 2px 10px 0px #babacf;
+  box-shadow: -10px 10px 40px 0px #babacf, -2px 2px 10px 0px #babacf;
 }
 body main .right .slider .previous {
   float: left;
@@ -101,6 +101,44 @@ body main .bottom {
   background-repeat: no-repeat;
   background-size: 100% 100%;
   background-position: top;
+}
+
+@media (max-width: 863px) {
+  body {
+    padding: 10% 5%;
+  }
+  body main .right {
+    float: none;
+    width: 100%;
+    padding: 10px;
+  }
+  body main .right .slider {
+    margin: -65px auto;
+  }
+  body main .left {
+    float: none;
+    width: 100%;
+    text-align: center;
+    height: 300px;
+  }
+  body main .left .quote {
+    margin: 0 auto;
+  }
+  body main .left p {
+    padding: 0 5%;
+  }
+  body main .left span {
+    display: block;
+  }
+  body main .left span:first-of-type {
+    line-height: 1;
+    margin-top: 50px;
+    margin-bottom: 10px;
+  }
+  body main .bottom {
+    float: none;
+    width: 100%;
+  }
 }
 
 /*# sourceMappingURL=compiled.css.map */
