--- a/style.scss
+++ b/style.scss
@@ -51,7 +51,7 @@ body {
                 width: 75px;
                 margin-top: -65px;
                 margin-left: 25%;
-                box-shadow: 10px 10px 40px 0px $Grayish-Blue, 2px 2px 10px 0px $Grayish-Blue;
+                box-shadow: -10px 10px 40px 0px $Grayish-Blue, -2px 2px 10px 0px $Grayish-Blue;
 
                 .previous {
                     float: left;
@@ -128,6 +128,54 @@ body {
             background-repeat: no-repeat;
             background-size: 100% 100%;
             background-position: top;
+        }
+    }
+}
+
+@media (max-width: 863px) {
+    body {
+        padding: 10% 5%;
+
+        main {
+            .right {
+                float: none;
+                width: 100%;
+                padding: 10px;
+
+                .slider {
+                    margin: -65px auto;
+                }
+            }
+
+            .left {
+                float: none;
+                width: 100%;
+                text-align: center;
+                height: 300px;
+
+                .quote {
+                    margin: 0 auto;
+                }
+
+                p {
+                    padding: 0 5%;
+                }
+
+                span {
+                    display: block;
+                }
+
+                span:first-of-type {
+                    line-height: 1;
+                    margin-top: 50px;
+                    margin-bottom: 10px;
+                }
+            }
+
+            .bottom {
+                float: none;
+                width: 100%;
+            }
         }
     }
 }
