--- a/compiled.css
+++ b/compiled.css
@@ -7,6 +7,10 @@
 body {
   font-family: "Inter", sans-serif;
   font-size: 32px;
+}
+body main {
+  width: 1024px;
+  height: 738px;
   padding: 100px;
 }
 body main .right {
@@ -20,6 +24,7 @@ body main .right {
 }
 body main .right .slide {
   text-align: center;
+  overflow: hidden;
 }
 body main .right .slide .image-1,
 body main .right .slide .image-2 {
@@ -122,21 +127,19 @@ body main .bottom {
   background-position: top;
 }
 
-@media (max-width: 863px) {
-  body {
-    padding: 10% 5%;
+@media (max-width: 865px) {
+  body main {
+    width: auto;
+    height: auto;
   }
   body main .right {
     float: none;
-    width: 100%;
+    width: 500px;
     padding: 10px;
-  }
-  body main .right .slider {
-    margin: -65px auto;
   }
   body main .left {
     float: none;
-    width: 100%;
+    width: 500px;
     text-align: center;
     height: 300px;
   }
@@ -158,7 +161,7 @@ body main .left #name-2 {
   }
   body main .bottom {
     float: none;
-    width: 100%;
+    width: 500px;
   }
 }
 
